# drsai

./: .env.example  .gitignore  README.md  README_en.md  README_zh.md  pyproject.toml  requirements.txt  setup.py
docs/: agent_factory.md  develop.md  open-webui.md  update_log.md
drsai/: __init__.py  dr_sai.py  version.py
drsai/backend/: app_worker.py  run.py
drsai/backend/owebui_pipeline/: api.py
drsai/backend/pipelines/: .gitignore  config.py  deploy.sh  dev.sh  main.py
drsai/modules/baseagent/: drsaiagent.py  toolagent.py
drsai/modules/components/: LLMClient.py
drsai/modules/groupchat/: _base_group_chat.py  _round_robin_group_chat.py  _swarm_group_chat.py
drsai/modules/managers/: threads_manager.py
drsai/utils/: oai_stream_event.py
example/autogen/: assistantagent.py  roundgroup.py
example/oai_client/: assistant_R1_oai.py  assistant_custom_reply_demo_oai.py  assistant_deepresearch.py  assistant_rag_demo_oai.py  assistant_self_demo_oai.py  assistantagent_oai.py  assistantagent_oai_worker.py  drsai_oai_client_request.py  roundgroup_oai.py  roundgroup_oai_thread.py  userproxy_in_loop.py
example/oai_client/MCP_sse/: assistant_oai_mcp.py
example/oai_client/MCP_tools/: assistant_oai_mcp.py
examples/: hepai_model_list.py
examples/agent_groupchat/: assistant_R1_oai.py  assistant_custom_reply_demo_oai.py  assistant_multimadol.py  assistant_rag_demo_oai.py  assistant_structured_output.py  assistantagent_tool_call_mcp_oai.py  assistantagent_tool_call_oai.py  roundgroup_oai_thread.py  select_groupchat_oai.py  swarm_groupchat_oai.py  userproxy_in_loop.py
examples/agent_groupchat/MCP_sse/: assistant_oai_mcp.py
examples/agent_groupchat/MCP_tools/: assistant_oai_mcp.py
examples/autogen/: roundgroup.py
examples/cli/: agent_config.yaml  run_backend.py  run_cli.py  run_consle.py  run_status_agent.py
examples/cli/run_worker/: agent_worker.py  status_agent_test.py
examples/components/manager/: db_manager_test.py
examples/docker/browser/: abnormal_log.txt  normal_log.txt  run_docker.sh  test_browser_agent.py  test_browser_docker.py  新的supervisor.conf的报错.txt
examples/docker/ms_docker/: build_container_browser.sh  build_container_python.sh
examples/docker/vnc_docker/: Dockerfile  build_and_run.sh  cleanup.sh  supervisord.conf
examples/docker/wetty_docker/: build_wetty.sh  cleanup-wetty.sh  run_wetty.sh  stop_wetty.sh
examples/oai_client/: assistant_R1_oai.py  assistant_custom_reply_demo_oai.py  assistant_image_generate.py  assistant_multimadol.py  assistant_rag_demo_oai.py  assistant_structured_output.py  assistantagent_oai.py  assistantagent_oai_mcp.py  assistantagent_tool_call_oai.py  assistantagent_tool_call_reply_oai.py  roundgroup_oai.py  roundgroup_oai_thread.py  select_groupchat_oai.py  swarm_groupchat_oai.py  userproxy_in_loop.py
examples/oai_client/MCP_tools/: assistant_oai_mcp.py
examples/oai_client/web_search/: assistant_deepresearch.py  assistant_deepsearch.py
examples/requests/: drsai_oai_client_request.py  drsai_oai_test.py  drsai_oai_worker_request.py  remote_worker_model_list.py
examples/tools/: ddf_file_system.py  get_worker_agent_info.py  hepai_claude_install.sh  source_code_tool.py  weixin_seach.py
examples/tools/MCP/: mcp_AG_client01.py  mcp_sever01.py  mcp_sse01.py  mcp_streamable01.py
frontend/: .env.default  package.json
frontend/src/components/: contentheader.tsx  layout.tsx  settings.tsx  store.tsx  utils.ts
frontend/src/hooks/: provider.tsx  store.tsx
legacy/: requirements.txt
python/: README.md  pyproject.toml
src/drsai/: __init__.py  version.py
tutorials/: base01-hepai.md  base02-worker.md  base03-use_claude-code.md
tutorials/agents/: tutorials-01-intro-en.md  tutorials-01-intro.md  tutorials-01.md
tutorials/components/: db_manager01.md  tools01-mcp.md
tutorials/request/: request_drsai_ui.md  request_oai.md
(+74 files in other folders)
