[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drsai"
license = "MIT"
dynamic = ["version"]
description = "Developed by Dr. Sai's team at the Institute of High Energy Physics, Chinese Academy of Sciences (IHEP, CAS), this is a development framework designed for both single-agent and multi-agent collaborative systems"
readme = "README.md"
requires-python = ">=3.10"
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "autogen-agentchat==0.5.7",
    "autogen-core==0.5.7",
    "autogen-ext[openai,docker,file-surfer,web-surfer,magentic-one,task-centric-memory,mcp]==0.5.7",
    "aioconsole",
    "nest_asyncio",
    "playwright==1.51",
    "tldextract",
    "loguru",
    "pydantic",
    "pydantic-settings",
    "fastapi[standard]",

    # web_surfer
    "aiohttp",
    "docker",
    "typer",
    "aiofiles",
    "python-dotenv",
    "websockets",
    "sqlmodel",
    "psycopg",
    "alembic",
    "pyyaml",
    "html2text",
    "psutil",

    # SSO
    "dotmap",
    "authlib",
    "itsdangerous",
    "pycryptodome",
    "python-jose",

    # open_webui_pipeline
    "openai",
    "schedule",
    "tiktoken",
    "passlib",
    "jwt",
    # "aiohttp",
    "python-multipart",
    "json_schema_to_pydantic",
]

[project.optional-dependencies]
eval = [
    "huggingface_hub",
    "pandas",
    "scipy",
]

azure = [
    "autogen-ext[azure]==0.5.7"
]

ollama = [
    "autogen-ext[ollama]==0.5.7"
]

sso = [
    "hepai",
]

[project.scripts]
drsai = "drsai.backend.run:run"

[tool.uv]
dev-dependencies = [
    "poethepoet",
    "pyright==1.1.389",
    "mypy==1.13.0",
    "ruff==0.4.8",
    "pytest_asyncio",
    "pytest-cov",
    "pytest",
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx_rtd_theme",
    "types-aiofiles",
    "types-docker",
    "types-PyYaml"
]

[tool.ruff]
exclude = ["src/benchmarks/assistantbench"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.poe.tasks]
fmt = "ruff format src"
format.ref = "fmt src"
lint = "ruff check src"
mypy = "mypy src"
pyright = "pyright src"
test.env = { PYTHONPATH = "src" }
test.sequence = [
    "playwright install",
    "pytest tests --cov=src --cov-report=xml --cov-report=term-missing",
]
test.default_item_type = "cmd"
check = ["fmt", "lint", "pyright", "test"]

[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = true

# from https://blog.wolt.com/engineering/2021/09/30/professional-grade-mypy-configuration/
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = false

disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = true
exclude = ["src/drsai/backend/ui/ui_backend/eval"]

[tool.pyright]
include = ["src", "tests", "samples"]
exclude = ["src/drsai/backend/ui/ui_backend/eval/benchmarks/assistantbench/evaluate_utils", "src/drsai/backend/ui/ui_backend/agents/web_surfer/_cua_web_surfer.py", "src/drsai/backend/ui/ui_backend/backend/web/routes"]
typeCheckingMode = "off"
reportUnnecessaryIsInstance = false
reportMissingTypeStubs = false


[tool.hatch.build.targets.wheel]
include-package-data = true
packages = [
    "src/drsai",
    ]

[tool.hatch.version]
path = "src/drsai/version.py"

[tool.hatch.build]
include = [
  "src/drsai/**/*.py",
  "src/drsai/**/*.yaml",
  "src/drsai/**/*.json",
  "src/drsai/**/*.js",
  "src/drsai/backend/ui/ui_backend/backend/web/ui/**/*", 
  "src/drsai/backend/ui/ui_backend/docker/**/*",
]
exclude = [
  "src/drsai/tests/**",
  "**/__pycache__",
  "**/.*.swp",
]
ignore-vcs = true 
